--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
+    "axios-mock-adapter": "^1.21.4",
     "cypress": "^12.7.0",
     "jsdom": "^21.1.0",
     "start-server-and-test": "^2.0.0",
